Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 2.12.0
-
Fix Version/s: Impala 3.0, Impala 2.12.0
-
Component/s: Backend
-
Labels:None
-
Epic Color:ghx-label-5
Description
The state machine in FragmentInstanceState::UpdateState() can be simplified. LAST_BATCH_SENT must always happen in state PRODUCING_DATA. "Open Finished" should be marked when receiving WAITING_FOR_FIRST_BATCH.